<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color"/>

        <SeekBar
            android:id="@+id/seekBar_Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <SeekBar
            android:id="@+id/seekBar_Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <SeekBar
            android:id="@+id/seekBar_Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <Button
            android:id="@+id/color_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/input_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:hint="@string/input_x"
            android:inputType="number" />

        <EditText
            android:id="@+id/input_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:hint="@string/input_y"
            android:inputType="number" />

        <Button
            android:id="@+id/add_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_point" />

        <Button
            android:id="@+id/show_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/graph" />
    </LinearLayout>


</FrameLayout>
